# UnittestFramework

./: .gitignore  CMakeLists.txt  COPYING  Doxyfile  README.md  generate_coverage.sh
src/: unittest.c  unittest.h
src/test_object/: example_unittest.c  test_object.c  test_object.h
